--- a/public/app/views/index.html
+++ b/public/app/views/index.html
@@ -35,8 +35,8 @@
 <body ng-controller="MainController as main">
 
 
-	<nav class="navbar navbar-fixed-top navbar-light bg-faded" style="background-color: white;border-bottom:1px solid #d0d0d0;">
-		<a class="navbar-brand" href="/">
+	<nav class="navbar navbar-fixed-top navbar-light bg-faded" style="background-color: #243271;border-bottom:1px solid #d0d0d0;">
+		<a class="navbar-brand" href="/" style="color:white">
 			Bankomi
 		</a>
 		<button class="navbar-toggler hidden-lg-up" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"></button>
@@ -46,14 +46,14 @@
 
 			<ul class="nav navbar-nav">
 				<li class="nav-item" ng-if="!main.loggedIn">
-					<a class="nav-link" href="/login">Login</a>
+					<a class="nav-link" href="/login" style="color:white">Login</a>
 				</li>
 				</li>
 				<li class="nav-item" ng-if="main.loggedIn">
-					<a class="nav-link" href="#">{{ main.user.name }}</a>
+					<a class="nav-link" href="#" style="color:white">{{ main.user.name }}</a>
 				</li>
 				<li class="nav-item" ng-if="main.loggedIn" ng-click="main.doLogout()">
-					<a class="nav-link" href="/">Logout</a>
+					<a class="nav-link" href="/" style="color:white">Logout</a>
 				</li>
 			</ul>
 		</div>
