--- a/public/app/views/pages/market.html
+++ b/public/app/views/pages/market.html
@@ -1,175 +1,198 @@
+<style type="text/css">
+.table-striped>thead>tr>th,
+.table-striped>tbody>tr>th,
+.table-condensed>thead>tr>td,
+.table-striped>tbody>tr>td {
+    padding: 2px;
+}
+</style>
 <h1>Live Market</h1>
-<div class="col-lg-6 col-md-12">
-    <table class="table table-hover">
-        <thead>
-            <tr>
-                <th>#</th>
-                <th style="text-align: left" colspan="1">Currency</th>
-                <th colspan="1" style="text-align: right">LTP</th>
-                <th colspan="1" style="text-align: right">Prev. close</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <th scope="row">1</th>
-                <td style="text-align: left">USD-INR</td>
-                <td style="text-align: right">65.4535</td>
-                <td style="text-align: right">66.7075</td>
-            </tr>
-            <tr>
-                <th scope="row">2</th>
-                <td style="text-align: left">EUR-USD</td>
-                <td style="text-align: right">1.07851</td>
-                <td style="text-align: right">1.0604</td>
-            </tr>
-            <tr>
-                <th scope="row">3</th>
-                <td style="text-align: left">JPY-USD</td>
-                <td style="text-align: right">110.6550</td>
-                <td style="text-align: right;">111.0604</td>
-            </tr>
-            <tr>
-                <th scope="row">3</th>
-                <td style="text-align: left">JPY-USD</td>
-                <td style="text-align: right">110.6550</td>
-                <td style="text-align: right;">111.0604</td>
-            </tr>
-            <tr>
-                <th scope="row">3</th>
-                <td style="text-align: left">JPY-USD</td>
-                <td style="text-align: right">110.6550</td>
-                <td style="text-align: right;">111.0604</td>
-            </tr>
-        </tbody>
-    </table>
-</div>
-<div class="col-lg-6 col-md-12">
-    <table class="table table-hover">
-        <thead>
-            <tr>
-                <th>#</th>
-                <th colspan="1" style="text-align: left">Commodity</th>
-                <th colspan="1" style="text-align: right">LTP</th>
-                <th colspan="1" style="text-align: right">Prev. close</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <th scope="row">1</th>
-                <td style="text-align: left">Gold</td>
-                <td style="text-align: right">29561</td>
-                <td style="text-align: right">29566</td>
-            </tr>
-            <tr>
-                <th scope="row">2</th>
-                <td style="text-align: left">Silver</td>
-                <td style="text-align: right">43263</td>
-                <td style="text-align: right">43265</td>
-            </tr>
-            <tr>
-                <th scope="row">3</th>
-                <td style="text-align: left">Crudeoil</td>
-                <td style="text-align: right">21091</td>
-                <td style="text-align: right">21089</td>
-            </tr>
-            <tr>
-                <th scope="row">3</th>
-                <td style="text-align: left">Crudeoil</td>
-                <td style="text-align: right">21091</td>
-                <td style="text-align: right">21089</td>
-            </tr>
-            <tr>
-                <th scope="row">3</th>
-                <td style="text-align: left">Crudeoil</td>
-                <td style="text-align: right">21091</td>
-                <td style="text-align: right">21089</td>
-            </tr>
-        </tbody>
-    </table>
-</div>
-<div class="col-lg-6">
-    <table class="table table-hover">
-        <thead>
-            <tr>
-                <th>#</th>
-                <th style="text-align: left" colspan="1">Fixed Income</th>
-                <th colspan="1" style="text-align: right">LTP</th>
-                <th colspan="1" style="text-align: right">Prev. close</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <th scope="row">1</th>
-                <td style="text-align: left">Jacob</td>
-                <td style="text-align: right">Thornton</td>
-                <td style="text-align: right">@fat</td>
-            </tr>
-            <tr>
-                <th scope="row">2</th>
-                <td style="text-align: left">Jacob</td>
-                <td style="text-align: right">Thornton</td>
-                <td style="text-align: right">@fat</td>
-            </tr>
-            <tr>
-                <th scope="row">3</th>
-                <td style="text-align: left">Jacob</td>
-                <td style="text-align: right">Thornton</td>
-                <td style="text-align: right;">@fat</td>
-            </tr>
-            <tr>
-                <th scope="row">3</th>
-                <td style="text-align: left">Jacob</td>
-                <td style="text-align: right">Thornton</td>
-                <td style="text-align: right;">@fat</td>
-            </tr>
-            <tr>
-                <th scope="row">3</th>
-                <td style="text-align: left">Jacob</td>
-                <td style="text-align: right">Thornton</td>
-                <td style="text-align: right;">@fat</td>
-            </tr>
-        </tbody>
-    </table>
-</div>
-<div class="col-lg-6">
-    <table class="table table-hover">
-        <thead>
-            <tr>
-                <th>#</th>
-                <th style="text-align: left" colspan="2">Equity</th>
-                <th colspan="1" style="text-align: right">LTP</th>
-                <th colspan="1" style="text-align: right">Prev. close</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <th scope="row">1</th>
-                <td style="text-align: left" colspan="2">Jacob</td>
-                <td style="text-align: right">Thornton</td>
-                <td style="text-align: right">@fat</td>
-            </tr>
-            <tr>
-                <th scope="row">2</th>
-                <td style="text-align: left" colspan="2">Jacob</td>
-                <td style="text-align: right">Thornton</td>
-                <td style="text-align: right">@fat</td>
-            </tr>
-            <tr>
-                <th scope="row">3</th>
-                <td style="text-align: left" colspan="2">Jacob</td>
-                <td style="text-align: right">Thornton</td>
-                <td style="text-align: right;">@fat</td>
-            </tr>            <tr>
-                <th scope="row">3</th>
-                <td style="text-align: left" colspan="2">Jacob</td>
-                <td style="text-align: right">Thornton</td>
-                <td style="text-align: right;">@fat</td>
-            </tr>            <tr><th scope="row">
-    3</th>
-<td style="text-align: left" colspan="2">Jacob</td>
-<td style="text-align: right">Thornton</td>
-<td style="text-align: right;">@fat</td>
-</tr>
-        </tbody>
-    </table>
+<div  class="row">
+    <div class="col-lg-4 col-md-4">
+        <img class="img-fluid" style="margin-top: 200px" alt="Responsive image" src="/app/assets/banner.02.jpg">
+    </div>
+    <div class="col-lg-7 col-md-7" style="margin-top: 20px;background-color: white; border:1px solid #e5e1e1; box-shadow: 0 1px 2px 0 rgba(0,0,0,0.1); padding: 10px ">
+        <div>
+            <h4 style="margin-left: 15px">Live Market</h4>
+        </div>
+        <div class="col-lg-6 col-md-6">
+            <table class="table table-sm table-striped">
+                <thead>
+                    <tr>
+                        <th style="text-align: left" colspan="1">Currency</th>
+                        <th colspan="1" style="text-align: right">LTP</th>
+                        <th colspan="1" style="text-align: right">Prev. close</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td class="small" style="text-align: left;padding: 0px">USD-INR</td>
+                        <td class="small" style="text-align: right">65.4535</td>
+                        <td class="small" style="text-align: right">66.7075</td>
+                    </tr>
+                    <tr>
+                        <td class="small" style="text-align: left">EUR-USD</td>
+                        <td class="small" style="text-align: right">1.07851</td>
+                        <td class="small" style="text-align: right">1.06040</td>
+                    </tr>
+                    <tr>
+                        <td class="small" style="text-align: left">JPY-USD</td>
+                        <td class="small" style="text-align: right">110.6550</td>
+                        <td class="small" style="text-align: right;">112.27</td>
+                    </tr>
+                    <tr>
+                        <td class="small" style="text-align: left">GBP-USD</td>
+                        <td class="small" style="text-align: right">1.024</td>
+                        <td class="small" style="text-align: right">1.246</td>
+                    </tr>
+                    <tr>
+                        <td class="small" style="text-align: left">USD-INR 3mF</td>
+                        <td class="small" style="text-align: right">67.52</td>
+                        <td class="small" style="text-align: right">67.5175</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+        <div class="col-lg-6 col-md-6">
+            <table class="table table-striped table-sm">
+                <thead>
+                    <tr>
+                        <th colspan="1" style="text-align: left">Commodity</th>
+                        <th colspan="1" style="text-align: right">LTP</th>
+                        <th colspan="1" style="text-align: right">Prev. close</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td class="small" style="text-align: left">Gold</td>
+                        <td class="small" style="text-align: right">29561</td>
+                        <td class="small" style="text-align: right">29565</td>
+                    </tr>
+                    <tr>
+                        <td class="small" style="text-align: left">Silver</td>
+                        <td class="small" style="text-align: right">43263</td>
+                        <td class="small" style="text-align: right">43265</td>
+                    </tr>
+                    <tr>
+                        <td class="small" style="text-align: left">Crudeoil</td>
+                        <td class="small" style="text-align: right">21091</td>
+                        <td class="small" style="text-align: right">21089</td>
+                    </tr>
+                    <tr>
+                        <td class="small" style="text-align: left">Copper</td>
+                        <td class="small" style="text-align: right">393.25</td>
+                        <td class="small" style="text-align: right">394.5</td>
+                    </tr>
+                    <tr>
+                        <td class="small" style="text-align: left">Cotton</td>
+                        <td class="small" style="text-align: right">21090</td>
+                        <td class="small" style="text-align: right">21089</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+        <div class="col-lg-6 col-md-6">
+            <table class="table table-striped table-sm">
+                <thead>
+                    <tr>
+                        <th style="text-align: left" colspan="1">Fixed Income</th>
+                        <th colspan="1" style="text-align: right">LTP</th>
+                        <th colspan="1" style="text-align: right">Prev. close</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td class="small" style="text-align: left">Call Rate</td>
+                        <td class="small" style="text-align: right">Thornton</td>
+                        <td class="small" style="text-align: right">@fat</td>
+                    </tr>
+                    <tr>
+                        <td class="small" style="text-align: left">3-mth CP</td>
+                        <td class="small" style="text-align: right">Thornton</td>
+                        <td class="small" style="text-align: right">@fat</td>
+                    </tr>
+                    <tr>
+                        <td class="small" style="text-align: left">1 Yr. T-Bill</td>
+                        <td class="small" style="text-align: right">Thornton</td>
+                        <td class="small" style="text-align: right">@fat</td>
+                    </tr>
+                    <tr>
+                        <td class="small" style="text-align: left">5-Yr. MIFOR</td>
+                        <td class="small" style="text-align: right">Thornton</td>
+                        <td class="small" style="text-align: right">@fat</td>
+                    </tr>
+                    <tr>
+                        <td class="small" style="text-align: left">10-Yr. G-Sec</td>
+                        <td class="small" style="text-align: right">Thornton</td>
+                        <td class="small" style="text-align: right">@fat</td>
+                    </tr>
+                    <tr>
+                        <td class="small" style="text-align: left">3-mths USD Libor</td>
+                        <td class="small" style="text-align: right">Thornton</td>
+                        <td class="small" style="text-align: right">@fat</td>
+                    </tr>
+                    <tr>
+                        <td class="small" style="text-align: left">US Dollar Index</td>
+                        <td class="small" style="text-align: right">Thornton</td>
+                        <td class="small" style="text-align: right">@fat</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+        <div class="col-lg-6 col-md-6">
+            <table class="table table-striped table-sm">
+                <thead>
+                    <tr>
+                        <th style="text-align: left" colspan="2">Equity</th>
+                        <th colspan="1" style="text-align: right">LTP</th>
+                        <th colspan="1" style="text-align: right">Prev. close</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td class="small" style="text-align: left" colspan="2">BSE Sensex</td>
+                        <td class="small" style="text-align: right">Thornton</td>
+                        <td class="small" style="text-align: right">@fat</td>
+                    </tr>
+                    <tr>
+                        <td class="small" style="text-align: left" colspan="2">Nikkei<sub style="color:#BCBCC8"> CFD</sub></td>
+                        <td class="small" style="text-align: right">Thornton</td>
+                        <td class="small" style="text-align: right">@fat</td>
+                    </tr>
+                    <tr>
+                        <td class="small" style="text-align: left" colspan="2">Hang Seng<sub style="color:#BCBCC8"> CFD</sub></td>
+                        <td class="small" style="text-align: right">Thornton</td>
+                        <td class="small" style="text-align: right">@fat</td>
+                    </tr>
+                    <tr>
+                        <td class="small" style="text-align: left" colspan="2">Shanghai SSEC<sub style="color:#BCBCC8"> CFD</sub></td>
+                        <td class="small" style="text-align: right">Thornton</td>
+                        <td class="small" style="text-align: right">@fat</td>
+                    </tr>
+                    <tr>
+                        <td class="small" style="text-align: left" colspan="2">FTSE 100<sub style="color:#BCBCC8"> CFD</sub></td>
+                        <td class="small" style="text-align: right">Thornton</td>
+                        <td class="small" style="text-align: right">@fat</td>
+                    </tr>
+                    <tr>
+                        <td class="small" style="text-align: left" colspan="2">DAX<sub style="color:#BCBCC8"> CFD</sub></td>
+                        <td class="small" style="text-align: right">Thornton</td>
+                        <td class="small" style="text-align: right">@fat</td>
+                    </tr>
+                    <tr>
+                        <td class="small" style="text-align: left" colspan="2">S&P 500<sub style="color:#BCBCC8"> CFD</sub></td>
+                        <td class="small" style="text-align: right">Thornton</td>
+                        <td class="small" style="text-align: right">@fat</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+        <div class="col-lg-3"></div>
+        <div class="col-lg-6">
+            <div style="margin-top: 10px;">
+                <button type="button" class="btn btn-primary btn-block">Want to know more</button>
+            </div>
+        </div>
+        <div class="col-lg-3"></div>
+    </div>
 </div>
