--- a/public/app/views/index.html
+++ b/public/app/views/index.html
@@ -5,7 +5,7 @@
 	<title>Bankomi</title>
 
 	<!-- Compiled and minified CSS -->
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.5/css/bootstrap.min.css" integrity="sha384-AysaV+vQoT3kOAXZkl02PThvDr8HYKPZhNT5h/CXfBThSRXQ6jW5DO2ekP5ViFdi" crossorigin="anonymous">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.5/css/bootstrap.min.css" crossorigin="anonymous">
 
 	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.8/angular.min.js"></script>
 	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.8/angular-route.min.js"></script>
@@ -15,16 +15,20 @@
 	<script type="text/javascript" src="/app/services/authService.js"></script>
 	<script type="text/javascript" src="/app/services/userService.js"></script>
 	<script type="text/javascript" src="/app/services/appointmentService.js"></script>
+	<script type="text/javascript" src="/app/services/calendarService.js"></script>
 	<!-- Controllers -->
 	<script type="text/javascript" src="/app/controllers/mainCtrl.js"></script>
 	<script type="text/javascript" src="/app/controllers/userCtrl.js"></script>
 	<script type="text/javascript" src="/app/controllers/appointmentCtrl.js"></script>
+	<script type="text/javascript" src="/app/controllers/calendarCtrl.js"></script>
 
 	<script type="text/javascript" src="/socket.io/socket.io.js"></script>
 
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.9.0/moment.min.js"></script>
 
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/angular-moment/1.0.1/angular-moment.min.js"></script>
+	<link href="/app/bower_components/angular-bootstrap-calendar/dist/css/angular-bootstrap-calendar.min.css" rel="stylesheet">
+	<script src="/app/bower_components/angular-bootstrap-calendar/dist/js/angular-bootstrap-calendar-tpls.min.js"></script>
 
 	<script type="text/javascript" src="/app/app.routes.js"></script>
 	<script type="text/javascript" src="/app/app.js"></script>
